# dyne

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
data/pybullet/: README.md  a1_walking_diagonal.npz  a1_walking_square.npz  a1_walking_turn.npz  a1_walking_zigzag.npz  config.yaml  config_a1_diagonal.yaml  config_a1_square.yaml  config_a1_turn.yaml  config_a1_zigzag.yaml  configure_foot_positions.py  imu.yaml  pybullet_ground_truth.csv  pybullet_measurements.csv
data/simulation/: config.yaml  ground_truth.csv  imu.yaml  measurements.csv  sim.yaml  twist_ground_truth.csv  twist_measurements.csv
dyne/: __init__.py  arguments.py  metrics.py  noise_models.py  plot.py  utils.py
dyne/datasets/: __init__.py  constant_twist.py  dataset.py  pybullet.py
models/: a1.urdf  anymal_c.urdf  atlas.urdf
python/: CMakeLists.txt  dyne.i  dyne.tpl
scripts/: compute_frequency.py  estimate_bias.py  export_pybullet_csv.py  varun01_estimate_constant_twist.py  varun02_estimate_imu.py  varun03_base_estimator_pybullet.py  varun04_plot_imu.py  varun05_bloesch_estimator_pybullet.py  varun06_dyne_estimator_pybullet.py  varun07_joint_angle_noise.py
src/: CMakeLists.txt  base.cpp  base.h  bloesch.cpp  bloesch.h  combined_imu_base.cpp  combined_imu_base.h  contact.h  dyne.cpp  dyne.h  noise_params.h  robot_imu.h  utils.cpp  utils.h
src/tests/: CMakeLists.txt  testBase.cpp  testBloesch.cpp  testCombinedImuBase.cpp  testDyne.cpp  testNoiseParams.cpp  testQuadrupedEstimation.cpp  testRobotImu.cpp  testUtils.cpp
tests/: test_arguments.py  test_base_state_estimator.py  test_bloesch_estimator.py  test_dataset.py  test_dyne_estimator.py  test_metrics.py  test_robot.py  test_smoother.py  test_utils.py
tests/fixtures/: a1_walking_straight.npz  config.yaml  imu.yaml
